--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+                <img class="img-fluid" src="assets/img/anomalyescape.png" alt="..." />
             </div>
         </section>
         <!-- Projects-->
@@ -90,7 +90,8 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
+                    <div class="col-lg-6"> <!--<img class="img-fluid" src="assets/img/anomalyescape.png" alt="..." /> --> <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                        </iframe> </div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
