--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"> <!--<img class="img-fluid" src="assets/img/anomalyescape.png" alt="..." /> --> <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                    <div class="col-lg-6"> <!--<img class="img-fluid" src="assets/img/anomalyescape.png" alt="..." /> --> <iframe src="https://youtu.be/XSXHO7uqbSU">
                         </iframe> </div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
