--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"> <!--<img class="img-fluid" src="assets/img/anomalyescape.png" alt="..." /> --> <iframe src="https://youtu.be/XSXHO7uqbSU">
+                    <div class="col-lg-6"> <!--<img class="img-fluid" src="assets/img/anomalyescape.png" alt="..." /> --> <iframe width="1250" height="703" src="https://www.youtube.com/embed/XSXHO7uqbSU" title="Fundamentals Of Game Development   Presentation Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </iframe> </div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
