--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col-xl-8 col-lg-7"><!--<img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-antenna.jpg" alt="..." /> -->
-                        <iframe src="https://www.youtube.com/embed/XSXHO7uqbSU" title="Fundamentals Of Game Development   Presentation Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XSXHO7uqbSU" title="Fundamentals Of Game Development   Presentation Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
