--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="home">
             <h1 class="bebas-neue-regular"> Owen Sims</h1>
-            <h2 class="play-bold">Computer Games Development student at <a href="https://www.staffs.ac.uk/course/computer-games-development-bsc">Staffordshire University</a></h2>
+            <h2 class="play-bold">Computer Games Development student at <a href="https://www.staffs.ac.uk/course/computer-games-development-bsc">University of Staffordshire</a></h2>
         </div>
         <nav>
             <button class="nav-button play-bold" onclick="window.location.href='#home'">Home</button>
@@ -29,14 +29,14 @@
         </div>
         <div id="projects">
             <h3 class="play-regular">Projects</h3>
-            <iframe src="https://www.youtube.com/embed/XSXHO7uqbSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/-wLblG19xPE?si=brxF0NyptldcEMmr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/XSXHO7uqbSU" title="Fundamentals of Game Development Presentation Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/-wLblG19xPE?si=brxF0NyptldcEMmr" title="Production Process and Pipeline Team Waste Team 9 Presentation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <iframe src="https://www.youtube.com/embed/Z0M1T5FIfDU" title="Mechanics Prototyping Gameplay Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <iframe src="https://www.youtube.com/embed/T2hNXb4C_nU" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div id="contact">
             <h3 class="play-regular">Contact</h3>
-            <p class="play-regular">Email:</p>
+            <p class="play-regular">Email: <a href="mailto:owengsims@outlook.com">owengsims@outlook.com</a></p>
         </div>
     </body>
 </html>
