--- a/index.html
+++ b/index.html
@@ -27,12 +27,26 @@
                 improve my existing ones. I am currently learning blender and developing a game in UE5 
                 alongside my studies.
         </div>
-        <div id="projects">
+        <div id = "projects">
             <h3 class="play-regular">Projects</h3>
-            <iframe src="https://www.youtube.com/embed/XSXHO7uqbSU" title="Fundamentals of Game Development Presentation Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/-wLblG19xPE?si=brxF0NyptldcEMmr" title="Production Process and Pipeline Team Waste Team 9 Presentation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/Z0M1T5FIfDU" title="Mechanics Prototyping Gameplay Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/T2hNXb4C_nU" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class = "project-grid">
+                <div class="project">
+                    <h4 class="play-regular">Hexwave</h4>
+                    <iframe src="https://www.youtube.com/embed/XSXHO7uqbSU" title="Fundamentals of Game Development Presentation Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="project">
+                    <h4 class="play-regular">Wasted Knight</h4>
+                    <iframe src="https://www.youtube.com/embed/-wLblG19xPE?si=brxF0NyptldcEMmr" title="Production Process and Pipeline Team Waste Team 9 Presentation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="project">
+                    <h4 class="play-regular">UE5 Blueprint Prototyping</h4>
+                    <iframe src="https://www.youtube.com/embed/Z0M1T5FIfDU" title="Mechanics Prototyping Gameplay Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="project">
+                    <h4 class="play-regular">Unity C# Prototyping</h4>
+                    <iframe src="https://www.youtube.com/embed/T2hNXb4C_nU" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
         <div id="contact">
             <h3 class="play-regular">Contact</h3>
