--- a/index.html
+++ b/index.html
@@ -33,18 +33,22 @@
                 <div class="project">
                     <h4 class="play-regular">Hexwave</h4>
                     <iframe src="https://www.youtube.com/embed/XSXHO7uqbSU" title="Fundamentals of Game Development Presentation Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p class="play-regular">Hexwave is a first person, arcade style shooter developed by me in Unreal Engine 5. The goal of the game is to survive increasingly difficult waves of enemies. This project taught me about the use of interfaces, behaviour trees, animation and more.</p>
                 </div>
                 <div class="project">
                     <h4 class="play-regular">Wasted Knight</h4>
                     <iframe src="https://www.youtube.com/embed/-wLblG19xPE?si=brxF0NyptldcEMmr" title="Production Process and Pipeline Team Waste Team 9 Presentation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p class="play-regular">Wasted Knight is a first person roguelike melee game developed by my team of 4 developers. From this, I learned about the whole games production process, and used agile development within a small team to produce an impressive result in 9 weeks.</p>
                 </div>
                 <div class="project">
                     <h4 class="play-regular">UE5 Blueprint Prototyping</h4>
                     <iframe src="https://www.youtube.com/embed/Z0M1T5FIfDU" title="Mechanics Prototyping Gameplay Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p class="play-regular">This project was my first use of Unreal Engine 5 and blueprints. This project taught me the basics of using blueprints, and how to quickly prototype game mechanics. </p>
                 </div>
                 <div class="project">
                     <h4 class="play-regular">Unity C# Prototyping</h4>
                     <iframe src="https://www.youtube.com/embed/T2hNXb4C_nU" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p class="play-regular">This project was my first use of Unity and C# in game engines. This project taught me the basics of using Unity, and how to quickly prototype game mechanics using code.</p>
                 </div>
             </div>
         </div>
