VFX Section Added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <button class="nav-button play-bold" onclick="window.location.href='#home'">Home</button>
             <button class="nav-button play-bold" onclick="window.location.href='#about'">About Me</button>
             <button class="nav-button play-bold" onclick="window.location.href='#projects'">Projects</button>
+            <button class="nav-button play-bold" onclick="window.location.href='#vfx'">VFX</button>
             <button class="nav-button play-bold" onclick="window.location.href='#contact'">Contact</button>
         </nav>
         <div id="about">
@@ -52,6 +53,8 @@
                 </div>
             </div>
         </div>
+        <div id = "vfx">
+            <h3 class="play-regular">VFX</h3>
         <div id="contact">
             <h3 class="play-regular">Contact</h3>
             <p class="play-regular">Email: <a href="mailto:owengsims@outlook.com">owengsims@outlook.com</a></p>
