Updated to current progress

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Play:wght@400;700&display=swap" rel="stylesheet">
     <script src="script.js"></script>
     <head>
-        <title>SLXSH</title>
+        <title>Owen Sims</title>
     </head>
     <body>
         <div id="home">
@@ -18,7 +18,9 @@
             <button class="nav-button play-bold" onclick="window.location.href='#about'">About Me</button>
             <button class="nav-button play-bold" onclick="window.location.href='#projects'">Projects</button>
             <button class="nav-button play-bold" onclick="window.location.href='#vfx'">VFX</button>
+            <button class="nav-button play-bold" onclick="window.location.href='#tools'">Tools</button>
             <button class="nav-button play-bold" onclick="window.location.href='#contact'">Contact</button>
+
         </nav>
         <div id="about">
             <h3 class="play-regular">About Me</h3>
@@ -30,31 +32,57 @@
         </div>
         <div id = "projects">
             <h3 class="play-regular">Projects</h3>
-            <div class = "project-grid">
-                <div class="project">
+            <div class = "grid">
+                <div class="grid-item">
                     <h4 class="play-regular">Hexwave</h4>
                     <iframe src="https://www.youtube.com/embed/XSXHO7uqbSU" title="Fundamentals of Game Development Presentation Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <p class="play-regular">Hexwave is a first person, arcade style shooter developed by me in Unreal Engine 5. The goal of the game is to survive increasingly difficult waves of enemies. This project taught me about the use of interfaces, behaviour trees, animation and more.</p>
                 </div>
-                <div class="project">
+                <div class="grid-item">
                     <h4 class="play-regular">Wasted Knight</h4>
                     <iframe src="https://www.youtube.com/embed/-wLblG19xPE?si=brxF0NyptldcEMmr" title="Production Process and Pipeline Team Waste Team 9 Presentation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <p class="play-regular">Wasted Knight is a first person roguelike melee game developed by my team of 4 developers. From this, I learned about the whole games production process, and used agile development within a small team to produce an impressive result in 9 weeks.</p>
                 </div>
-                <div class="project">
+                <div class="grid-item">
                     <h4 class="play-regular">UE5 Blueprint Prototyping</h4>
                     <iframe src="https://www.youtube.com/embed/Z0M1T5FIfDU" title="Mechanics Prototyping Gameplay Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <p class="play-regular">This project was my first use of Unreal Engine 5 and blueprints. This project taught me the basics of using blueprints, and how to quickly prototype game mechanics. </p>
                 </div>
-                <div class="project">
+                <div class="grid-item">
                     <h4 class="play-regular">Unity C# Prototyping</h4>
-                    <iframe src="https://www.youtube.com/embed/T2hNXb4C_nU" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/T2hNXb4C_nU" title="C# For Game Engines Assessment Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <p class="play-regular">This project was my first use of Unity and C# in game engines. This project taught me the basics of using Unity, and how to quickly prototype game mechanics using code.</p>
+                </div>
+                <div class="grid-item">
+                    <h4 class="play-regular">Unreal Engine 5 C++ Prototyping</h4>
+                    <iframe src="https://youtube.com/embed/lYfk1i2CUvU" title="C4E Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p class="play-regular">This project was my first use of C++ in Unreal Engine 5. This project taught me the basics of using C++ in Unreal Engine 5, and how to quickly prototype game mechanics using code.</p>
+                </div>
+                <div class="grid-item">
+                    <h4 class="play-regular">Coming Soon</h4>
+                    <p class="play-regular">More projects coming soon...</p>
                 </div>
             </div>
         </div>
         <div id = "vfx">
             <h3 class="play-regular">VFX</h3>
+            <iframe src="https://www.youtube.com/embed/j0ZcUt8juYM" title="VFX Showreel" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <p class="play-regular">My VFX showreel, showcasing some of the VFX I created for my VFX module at university.</p>
+        </div>
+        <div id = "tools">
+            <h3 class="play-regular">Tools</h3>
+            <div class = "grid">
+                <div class="grid-item">
+                    <h4 class="play-regular">Railway System</h4>
+                    <iframe src="https://www.youtube.com/embed/EZpxQ4Gpg2A" title="Railway System Tool Demonstration" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p class="play-regular">This project was my first tool developed for Unreal Engine 5. This tool allows the user to create a railway system in Unreal Engine 5 using splines. This project taught me about the use of splines, C++ and Editor Utility Widgets.</p>
+                </div>
+                <div class="grid-item">
+                    <h4 class="play-regular">Coming Soon</h4>
+                    <p class="play-regular">More tools coming soon...</p>
+                </div>
+            </div>
+        </div>
         <div id="contact">
             <h3 class="play-regular">Contact</h3>
             <p class="play-regular">Email: <a href="mailto:owengsims@outlook.com">owengsims@outlook.com</a></p>
