--- a/index.html
+++ b/index.html
@@ -1,52 +1,170 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Owen Sims</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Play:wght@400;700&display=swap" rel="stylesheet">
-        <script src="script.js"></script>
-    </head>
-    <body>
-        <header id="home">
-            <h1 class="bebas-neue-regular">Owen Sims</h1>
-            <h2 class="play-bold">Game Developer studying at <a href="https://www.staffs.ac.uk/course/computer-games-development-bsc">University of Staffordshire</a></h2>
-        </header>
-        <nav>
-            <button class="nav-button play-bold" onclick="window.location.href='#home'">Home</button>
-            <button class="nav-button play-bold" onclick="window.location.href='#about'">About</button>
-            <button class="nav-button play-bold" onclick="window.location.href='#projects'">Projects</button>
-            <button class="nav-button play-bold" onclick="window.location.href='#vfx'">VFX</button>
-            <button class="nav-button play-bold" onclick="window.location.href='#contact'">Contact</button>
-        </nav>
-        <section id="about">
-            <div class="grid-rtl">
-                <div class="borderless-grid-item">
-                    <h3 class="play-regular">About Me</h3>
-                    <p class="play-regular">I am a second year Computer Games Development student at 
-                        Staffordshire University. I have always had a passion for game development, and 
-                        started programming in middle school. I am always looking to learn new skills and 
-                        improve my existing ones. I am currently learning blender and developing a game in UE5 
-                        alongside my studies.
-                    </p>
-                </div>
-            </div>
-        </section>
-        <section id="projects">
-            <h3 class="play-regular">Projects</h3>
-            <div class="project">
-                <h4 class="play-regular">Hexwave</h4>
-                <div class="grid-ltr">
-                    <div class="borderless-grid-item">
-                        <p class="play-regular">Hexwave is a first person, arcade style shooter developed by me in Unreal Engine 5. The goal of the game is to survive increasingly difficult waves of enemies. This project taught me about the use of interfaces, behaviour trees, animation and more.</p>
-                    </div>
-                    <div class="borderless-grid-item">
-                        <iframe src="https://www.youtube.com/embed/XSXHO7uqbSU" title="Fundamentals of Game Development Presentation Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div>
-                </div>
-            </div>
-            <!-- <div>
+  <head>
+    <title>Owen Sims</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Play:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="script.js"></script>
+  </head>
+
+  <body>
+    <header id="home">
+      <h1 class="bebas-neue-regular">Owen Sims</h1>
+      <h2 class="play-bold">
+        Game Developer studying at
+        <a href="https://www.staffs.ac.uk/course/computer-games-development-bsc"
+          >University of Staffordshire</a
+        >
+      </h2>
+    </header>
+    <nav>
+      <button
+        class="nav-button play-bold"
+        onclick="window.location.href='#home'"
+      >
+        Home
+      </button>
+      <button
+        class="nav-button play-bold"
+        onclick="window.location.href='#about'"
+      >
+        About
+      </button>
+      <button
+        class="nav-button play-bold"
+        onclick="window.location.href='#projects'"
+      >
+        Projects
+      </button>
+      <button
+        class="nav-button play-bold"
+        onclick="window.location.href='#vfx'"
+      >
+        VFX
+      </button>
+      <button
+        class="nav-button play-bold"
+        onclick="window.location.href='#contact'"
+      >
+        Contact
+      </button>
+    </nav>
+    <section id="about">
+      <div class="grid-rtl">
+        <div class="borderless-grid-item">
+          <h3 class="play-regular">About Me</h3>
+          <p class="play-regular">
+            I am a second year Computer Games Development student at
+            Staffordshire University. I have always had a passion for game
+            development, and started programming in middle school. I am always
+            looking to learn new skills and improve my existing ones. I am
+            currently learning blender and developing a game in UE5 alongside my
+            studies.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section id="projects">
+      <h3 class="play-regular">Projects</h3>
+      <div
+        class="project"
+        style="
+          background-image: linear-gradient(
+              to bottom,
+              rgba(0, 0, 0, 1),
+              rgba(0, 0, 0, 0),
+              rgba(0, 0, 0, 0),
+              rgba(0, 0, 0, 1)
+            ),
+            url(assets/img/RodAndRipple.png);
+        "
+      >
+        <h4 class="play-regular" style="padding: 2%; margin: auto">
+          Rod & Ripple
+        </h4>
+        <div class="grid-ltr">
+          <div class="borderless-grid-item">
+            <p class="play-regular">
+              Rod & Ripple is a fishing game developed in Unreal Engine 5. This
+              game is the result of my Junior Collaborative Games Development
+              Module. On this project, I worked on:
+            </p>
+            <ul class="play-regular">
+              <li>Input handling</li>
+              <li>
+                Boat mechanics
+                <ul>
+                  <li>Boat movement</li>
+                  <li>Boat camera movement</li>
+                  <li>Boat health</li>
+                </ul>
+              </li>
+              <li>
+                HUD and UI design, implementation and functionality
+                <ul>
+                  <li>Boat HUD</li>
+                  <li>Casting HUD</li>
+                  <li>Shop UI</li>
+                  <li>Menus</li>
+                </ul>
+              </li>
+              <li>Hub area mechanics</li>
+              <li>Bait system</li>
+            </ul>
+            <p class="play-regular">
+              This project furthered my knowledge of Blueprinting and UI
+              development in Unreal Engine 5. It also furthered my knowledge
+              about team development, and of the use of GitHub for version
+              control in large groups and collaboration.
+            </p>
+            <a
+              href="https://oculometric.itch.io/rod-and-ripple"
+              class="itch-button"
+              title="Rod & Ripple on Itch.io"
+              target="_blank"
+            ></a>
+          </div>
+          <div class="borderless-grid-item">
+            <iframe
+              src="https://www.youtube.com/embed/XialPecl-yg"
+              title="Rod & Ripple Gameplay Trailer"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </div>
+      <div class="project">
+        <h4 class="play-regular">Hexwave</h4>
+        <div class="grid-ltr">
+          <div class="borderless-grid-item">
+            <p class="play-regular">
+              Hexwave is a first person, arcade style shooter developed by me in
+              Unreal Engine 5. The goal of the game is to survive increasingly
+              difficult waves of enemies. This project taught me about the use
+              of interfaces, behaviour trees, animation and more.
+            </p>
+          </div>
+          <div class="borderless-grid-item">
+            <iframe
+              src="https://www.youtube.com/embed/XSXHO7uqbSU"
+              title="Fundamentals of Game Development Presentation Video"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </div>
+      <!-- <div>
                 <h4 class="play-regular">Wasted Knight</h4>
                 <iframe src="https://www.youtube.com/embed/-wLblG19xPE?si=brxF0NyptldcEMmr" title="Production Process and Pipeline Team Waste Team 9 Presentation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p class="play-regular">Wasted Knight is a first person roguelike melee game developed by my team of 4 developers. From this, I learned about the whole games production process, and used agile development within a small team to produce an impressive result in 9 weeks.</p>
@@ -71,15 +189,27 @@
                 <iframe src="https://www.youtube.com/embed/EZpxQ4Gpg2A" title="Railway System Tool Demonstration" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p class="play-regular">This project was my first tool developed for Unreal Engine 5. This tool allows the user to create a railway system in Unreal Engine 5 using splines. This project taught me about the use of splines, C++ and Editor Utility Widgets.</p>
             </div> -->
-        </section>
-        <section id = "vfx">
-            <h3 class="play-regular">VFX</h3>
-            <iframe src="https://www.youtube.com/embed/j0ZcUt8juYM" title="VFX Showreel" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <p class="play-regular">My VFX showreel, showcasing some of the VFX I created for my VFX module at university.</p>
-        </section>
-        <section id="contact">
-            <h3 class="play-regular">Contact</h3>
-            <p class="play-regular">Email: <a href="mailto:owengsims@outlook.com">owengsims@outlook.com</a></p>
-        </section>
-    </body>
+    </section>
+    <section id="vfx">
+      <h3 class="play-regular">VFX</h3>
+      <iframe
+        src="https://www.youtube.com/embed/j0ZcUt8juYM"
+        title="VFX Showreel"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
+      <p class="play-regular">
+        My VFX showreel, showcasing some of the VFX I created for my VFX module
+        at university.
+      </p>
+    </section>
+    <section id="contact">
+      <h3 class="play-regular">Contact</h3>
+      <p class="play-regular">
+        Email: <a href="mailto:owengsims@outlook.com">owengsims@outlook.com</a>
+      </p>
+    </section>
+  </body>
 </html>
