Projects reorganisation + Removed VFX Section

--- a/index.html
+++ b/index.html
@@ -43,12 +43,6 @@
       </button>
       <button
         class="nav-button play-bold"
-        onclick="window.location.href='#vfx'"
-      >
-        VFX
-      </button>
-      <button
-        class="nav-button play-bold"
         onclick="window.location.href='#contact'"
       >
         Contact
@@ -141,15 +135,65 @@
           </div>
         </div>
       </div>
-      <div class="project">
+      <div
+        class="project"
+        style="
+          background-image: linear-gradient(
+            to bottom,
+            #000000 0%,
+            #3e2723 50%,
+            #000000 100%
+          );
+        "
+      >
+        <h4 class="play-regular" style="padding: 2%; margin: auto">
+          Railway System Tool
+        </h4>
+        <div class="grid-ltr">
+          <div class="borderless-grid-item">
+            <p class="play-regular">
+              Railway System Tool is a tool developed by myself in Unreal Engine
+              5.4 for quickly and easily creating and managing railway systems.
+            </p>
+            <p class="play-regular">
+              This project has taught me about the use of splines, C++ and
+              Editor Utility Widgets in Unreal Engine 5. I intend to update and
+              continue development of this tool, adding more features and
+              functionality to it. I will release this tool on the FAB
+              Marketplace when it is ready.
+            </p>
+          </div>
+          <div class="borderless-grid-item">
+            <iframe
+              src="https://www.youtube.com/embed/EZpxQ4Gpg2A"
+              title="Railway System Tool Demonstration"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </div>
+      <div
+        class="project"
+        style="
+          background-image: linear-gradient(
+            to bottom,
+            #000000 0%,
+            #005f00 50%,
+            #000000 100%
+          );
+        "
+      >
         <h4 class="play-regular">Hexwave</h4>
         <div class="grid-ltr">
           <div class="borderless-grid-item">
             <p class="play-regular">
-              Hexwave is a first person, arcade style shooter developed by me in
-              Unreal Engine 5. The goal of the game is to survive increasingly
-              difficult waves of enemies. This project taught me about the use
-              of interfaces, behaviour trees, animation and more.
+              Hexwave is a first person, arcade style shooter developed by
+              myself in Unreal Engine 5. The goal of the game is to survive
+              increasingly difficult waves of enemies. This project taught me
+              about the use of interfaces, behaviour trees, animation and more.
             </p>
           </div>
           <div class="borderless-grid-item">
@@ -164,46 +208,71 @@
           </div>
         </div>
       </div>
-      <!-- <div>
-                <h4 class="play-regular">Wasted Knight</h4>
-                <iframe src="https://www.youtube.com/embed/-wLblG19xPE?si=brxF0NyptldcEMmr" title="Production Process and Pipeline Team Waste Team 9 Presentation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <p class="play-regular">Wasted Knight is a first person roguelike melee game developed by my team of 4 developers. From this, I learned about the whole games production process, and used agile development within a small team to produce an impressive result in 9 weeks.</p>
-            </div>
-            <div>
-                <h4 class="play-regular">UE5 Blueprint Prototyping</h4>
-                <iframe src="https://www.youtube.com/embed/Z0M1T5FIfDU" title="Mechanics Prototyping Gameplay Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <p class="play-regular">This project was my first use of Unreal Engine 5 and blueprints. This project taught me the basics of using blueprints, and how to quickly prototype game mechanics. </p>
-            </div>
-            <div>
-                <h4 class="play-regular">Unity C# Prototyping</h4>
-                <iframe src="https://www.youtube.com/embed/T2hNXb4C_nU" title="C# For Game Engines Assessment Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <p class="play-regular">This project was my first use of Unity and C# in game engines. This project taught me the basics of using Unity, and how to quickly prototype game mechanics using code.</p>
-            </div>
-            <div>
-                <h4 class="play-regular">Unreal Engine 5 C++ Prototyping</h4>
-                <iframe src="https://youtube.com/embed/lYfk1i2CUvU" title="C4E Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <p class="play-regular">This project was my first use of C++ in Unreal Engine 5. This project taught me the basics of using C++ in Unreal Engine 5, and how to quickly prototype game mechanics using code.</p>
-            </div>
-            <div>
-                <h4 class="play-regular">Railway System</h4>
-                <iframe src="https://www.youtube.com/embed/EZpxQ4Gpg2A" title="Railway System Tool Demonstration" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <p class="play-regular">This project was my first tool developed for Unreal Engine 5. This tool allows the user to create a railway system in Unreal Engine 5 using splines. This project taught me about the use of splines, C++ and Editor Utility Widgets.</p>
-            </div> -->
-    </section>
-    <section id="vfx">
-      <h3 class="play-regular">VFX</h3>
-      <iframe
-        src="https://www.youtube.com/embed/j0ZcUt8juYM"
-        title="VFX Showreel"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin"
-        allowfullscreen
-      ></iframe>
-      <p class="play-regular">
-        My VFX showreel, showcasing some of the VFX I created for my VFX module
-        at university.
-      </p>
+
+      <div
+        class="project"
+        style="
+          background-image: linear-gradient(
+            to bottom,
+            #000000 0%,
+            #308657 50%,
+            #000000 100%
+          );
+        "
+      >
+        <h4 class="play-regular">Wasted Knight</h4>
+        <div class="grid-ltr">
+          <div class="borderless-grid-item">
+            <p class="play-regular">
+              Wasted Knight is a first person roguelike melee game developed by
+              my team of 4 developers. From this, I learned about the whole
+              games production process, and used agile development within a
+              small team to produce an impressive result in 9 weeks.
+            </p>
+          </div>
+          <div class="borderless-grid-item">
+            <iframe
+              src="https://www.youtube.com/embed/-wLblG19xPE"
+              title="Production Process and Pipeline Team Waste Team 9 Presentation"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </div>
+      <div
+        class="project"
+        style="
+          background-image: linear-gradient(
+            to bottom,
+            #000000 0%,
+            #008faf 50%,
+            #000000 100%
+          );
+        "
+      >
+        <h4 class="play-regular">VFX</h4>
+        <div class="grid-ltr">
+          <div class="borderless-grid-item">
+            <p class="play-regular">
+              My VFX showreel, showcasing some of the VFX I created for my VFX
+              module at university.
+            </p>
+          </div>
+          <div class="borderless-grid-item">
+            <iframe
+              src="https://www.youtube.com/embed/j0ZcUt8juYM"
+              title="VFX Showreel"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="contact">
       <h3 class="play-regular">Contact</h3>
