--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
         <div class="borderless-grid-item">
           <h3 class="play-regular">About Me</h3>
           <p class="play-regular">
-            I am a second year Computer Games Development student at
+            I am a final year Computer Games Development student at
             Staffordshire University. I have always had a passion for game
             development, and started programming in middle school. I am always
             looking to learn new skills and improve my existing ones. I am
-            currently learning blender and developing a game in UE5 alongside my
-            studies.
+            currently working on my dissertation project for university,
+            studying how tools can be created to help produce modular weapon
+            systems.
           </p>
         </div>
       </div>
