Added LinkedIn and email buttons

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </button>
     </nav>
     <section id="about">
-      <div class="grid-rtl">
+      <div class="grid-ltr">
         <div class="borderless-grid-item">
           <h3 class="play-regular">About Me</h3>
           <p class="play-regular">
@@ -56,6 +56,20 @@
             studying how tools can be created to help produce modular weapon
             systems.
           </p>
+          <a
+            href="https://www.linkedin.com/in/owen-sims-784719222/"
+            style="background-image: url(assets/img/LinkedIn.png)"
+            class="social-button"
+            title="LinkedIn Profile"
+            target="_blank"
+          ></a>
+          <a
+            href="mailto:owengsims@outlook.com"
+            style="background-image: url(assets/img/Email.png)"
+            class="social-button"
+            title="Email Me"
+            target="_blank"
+          ></a>
         </div>
       </div>
     </section>
